--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ama29n.github.io/ReachOut",
+  "homepage": "https://ama29n.github.io/",
   "name": "project",
   "version": "0.1.0",
   "private": true,
@@ -13,7 +13,6 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
-    "gh-pages": "^3.2.3",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
@@ -48,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
